added proxy.conf.json fixfix

--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,6 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "proxyConfig": "proxy.conf.json",
             "outputPath": "dist/",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -70,6 +69,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "movpn:build",
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "my-project:build:production"
