--- a/angular.json
+++ b/angular.json
@@ -76,8 +76,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "movpn:build",
-            "proxyConfig": "proxy.conf.json"
+            "browserTarget": "movpn:build"
           },
           "configurations": {
             "production": {
