--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "date-fns": "^3.6.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.14",
